Latest changes after SemesterBreak

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,24 @@
 spring.application.name=Database
-spring.data.mongodb.uri=mongodb+srv://tshenolo:lefatshe@lefatshe-laronadb.cjmfj.mongodb.net/?retryWrites=true&w=majority&appName=Lefatshe-LaronaDB
-spring.data.mongodb.database=lefatshelarona
+#spring.data.mongodb.uri=mongodb+srv://tshenolo:lefatshe@lefatshe-laronadb.cjmfj.mongodb.net/?retryWrites=true&w=majority&appName=Lefatshe-LaronaDB
+#spring.data.mongodb.database=lefatshelarona
 Wdebug=true
-jwt.secret=jf/yIDjtLPFMaW+usdsOe26Ok1MVbWeFNRnr0YyL9B0=
+
+spring.data.mongodb.uri=mongodb://localhost:27017/lefatshelaronaDB
+spring.data.mongodb.database=lefatshelaronaDB
+
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
+server.port=8081
 
+# Resource Server Configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/Lefatshe-Larona
 
+# Optional: OAuth2 Client Registration (if needed)
+spring.security.oauth2.client.registration.keycloak.client-id=lefatshe-larona-backend
+spring.security.oauth2.client.registration.keycloak.client-secret=cOxcIPFhM5SiHZKY4OPw1tAZxpK0bGQp
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/Lefatshe-Larona
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/Lefatshe-Larona/protocol/openid-connect/certs
 
