User  Registration Part 2

--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,11 @@
 			<type>pom</type>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>3.4.4</version>
+		</dependency>
 		<!-- Spring Boot Starter Data JPA (if using database) -->
 
 		<dependency>
@@ -116,6 +120,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 			<version>3.4.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>10.2</version>
 		</dependency>
 
 
@@ -185,6 +195,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 
 		<dependency>
 			<groupId>com.cedarsoftware</groupId>
