--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,11 @@ spring.security.oauth2.client.registration.keycloak.authorization-grant-type=aut
 spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/Lefatshe-Larona/protocol/openid-connect/certs
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=letshwititshenolo21@gmail.com
+spring.mail.password=tjox swvs nbtj okop
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
