User  Registration Part 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Database
 #spring.data.mongodb.uri=mongodb+srv://tshenolo:lefatshe@lefatshe-laronadb.cjmfj.mongodb.net/?retryWrites=true&w=majority&appName=Lefatshe-LaronaDB
 #spring.data.mongodb.database=lefatshelarona
-Wdebug=true
+debug=true
 
 spring.data.mongodb.uri=mongodb://localhost:27017/lefatshelaronaDB
 spring.data.mongodb.database=lefatshelaronaDB
