User Posts and Updates addition

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.application.name=Database
 #spring.data.mongodb.database=lefatshelarona
 debug=true
 
+cloudinary.cloud_name= dtd2suuvr
+cloudinary.api_key= 516162824751963
+cloudinary.api_secret = WiW13k_8RwX3fyLe_R8XUIhzSjU
+
 spring.data.mongodb.uri=mongodb://localhost:27017/lefatshelaronaDB
 spring.data.mongodb.database=lefatshelaronaDB
 
@@ -27,5 +31,7 @@ spring.mail.username=letshwititshenolo21@gmail.com
 spring.mail.password=tjox swvs nbtj okop
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 
 
