Websocket Authentication Update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ spring.data.mongodb.database=lefatshelaronaDB
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.security.oauth2=DEBUG
 server.port=8081
+# application.properties
+spring.mvc.static-path-pattern=/static/**
+
 
 # Resource Server Configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/Lefatshe-Larona
